--- a/Day1/Task3.html
+++ b/Day1/Task3.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        table, td {
-        border: 2px solid black;
-        border-collapse: collapse;
-        width:500px;
-        height: 8em;
-      
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+            
+        }
+
+        .container {
+            width: 200px;
+            height: 300px;
+            display: flex;
+            flex-direction: column;
+            border: 2px solid black;
+        }
+
+        .row {
+            border-top: 2px solid black;
+            width: 100%;
+        }
+
+        .small {
+            height: 10%;
+        }
+
+        .large {
+            height: 50%;
         }
     </style>
 </head>
+
 <body>
-    <h3 style="color: rgb(49, 49, 212);">2. Create a table as shown in the image using the table tags in HTML</h3>
-    <table> 
-        <tr>
-            <td></td>
-        </tr>
-        <tr>
-            <td rowspan="3"></td>
-        </tr>
-        <tr></tr>
-        <tr></tr>
-        <tr>
-            <td rowspan="3"></td>
-        </tr>
-        <tr></tr>
-        <tr></tr>
-        <tr>
-            <td></td>
-        </tr>
-    </table>
+
+    <div class="container">
+        <div class="row small"></div>
+        <div class="row large"></div>
+        <div class="row large"></div>
+        <div class="row small"></div>
+    </div>
 </body>
+
 </html>
