--- a/Day1/Task2/Task2.html
+++ b/Day1/Task2/Task2.html
@@ -80,7 +80,7 @@
                         <div>
                             <label for="Sincome">Source of Income</label>
                             <div>
-                                <input class=" all-input" type="number" id="Sincome" name="dob" value="Employed" placeholder="Employed"/>
+                                <input class=" all-input" type="number" id="Sincome" name="dob"  placeholder="Employed"/>
                             </div>
                         </div> 
                     </div>
