--- a/Day2/Task2/Task2.html
+++ b/Day2/Task2/Task2.html
@@ -9,12 +9,9 @@
 <body>
     <div class="container">
        <div class="sideHeading">
-           <div id="scroll-container">
-            <div id="scroll-text">
-                Stay informed with our daily news updates|Get the latest news delivered to your inbox
-            </div>
-           </div>
-       </div>
+       <marquee width="64%" direction="right" height="40px" id="scroll-container">
+        This is a sample scrolling text that has scrolls texts to the right.
+        </marquee>
     </div>
 </body>
 </html>
